test/asm/diff-marks.err
error: diff-marks.asm(2):
    syntax error, unexpected - at the beginning of the line (is it a leftover diff mark?)
error: diff-marks.asm(3):
    syntax error, unexpected + at the beginning of the line (is it a leftover diff mark?)
Assembly aborted with 2 errors!
