test/asm/diff-marks.asm
SECTION "test", ROM0
-	ld a, 0
+	xor a
